--- a/src/app/clients/components/client-form/client-form.component.html
+++ b/src/app/clients/components/client-form/client-form.component.html
@@ -1,1 +1,42 @@
-<p>client-form works!</p>
+<form #form="ngForm" (ngSubmit)="onSubmit" class="container">
+    <div class="row">
+        <div class="col-12">
+            <mat-form-field class="fil-col">
+                <mat-label>Nome</mat-label>
+                <input matInput name="name" id="name" #nameModel="ngModel" [(ngModel)]="client.name" required>
+
+                @if (nameModel.hasError('required')) {
+                    <mat-error>Informe o nome do cliente</mat-error>
+                }
+            </mat-form-field>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <mat-form-field class="fil-col">
+                    <mat-label>E-mail</mat-label>
+                    <input matInput name="email" id="email" #emailModel="ngModel" [(ngModel)]="client.email" required email>
+                    @if (emailModel.hasError('required') || emailModel.hasError('email')) {
+                        <mat-error>Informe um email válido para o cliente</mat-error>
+                    }
+                </mat-form-field>
+            </div>
+
+            <div class="col-6">
+                <mat-form-field class="fil-col">
+                    <mat-label>Celular</mat-label>
+                    <input matInput name="phone" id="phone" #phoneModel="ngModel" [(ngModel)]="client.phone" required mask="(00) 00000-0000">
+                    @if (nameModel.hasError('required') || nameModel.hasError('mask')) {
+                        <mat-error>Informe o telefone valido para o cliente</mat-error>
+                    }
+                </mat-form-field>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col div-button">
+                <button type="submit" mat-flat-button></button>
+            </div>
+        </div>
+    </div>
+</form>
