terminando o cadastro de cliente

--- a/src/app/clients/components/client-form/client-form.component.html
+++ b/src/app/clients/components/client-form/client-form.component.html
@@ -35,7 +35,7 @@
 
         <div class="row">
             <div class="col div-button">
-                <button type="submit" mat-flat-button></button>
+                <button type="submit" mat-flat-button [disabled]="form.invalid">Salvar</button>
             </div>
         </div>
     </div>
