--- a/src/app/clients/components/client-form/client-form.component.html
+++ b/src/app/clients/components/client-form/client-form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (ngSubmit)="onSubmit" class="container">
+<form #form="ngForm" (ngSubmit)="onSubmit(form)" class="container">
     <div class="row">
         <div class="col-12">
             <mat-form-field class="fil-col">
