--- a/src/app/clients/components/client-table/client-table.component.html
+++ b/src/app/clients/components/client-table/client-table.component.html
@@ -1,1 +1,35 @@
-<p>client-table works!</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container matColumDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef-="let client">{{client.name}}</td>
+    </ng-container>
+
+    <ng-container matColumDef="email">
+        <th mat-header-cell *matHeaderCellDef>E-mail</th>
+        <td mat-cell *matCellDef-="let client">{{client.email}}</td>
+    </ng-container>
+
+    <ng-container matColumDef=""phone>
+        <th mat-header-cell *matHeaderCellDef>Celular</th>
+        <td mat-cell *matCellDef-="let client">{{formatPhone(client.phone)}}</td>
+    </ng-container>
+
+    <ng-container matColumDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef-="let client">
+            <button mat-min-fab extended matTooltip="excluir" class="delete-button" (click)="deleteClient(client)">
+                <mat-icon>delete</mat-icon>
+            </button>
+
+            <button mat-min-fab extended matTooltip="atualizar" class="update-button" (click)="onRequestUpdate(client)">
+                <mat-icon>edit</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColums"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColums"></tr>
+
+    <mat-paginator [pageSizeOptions]="[5,10,20]" showFirsLastButtons></mat-paginator>
+</table>
